--- a/.github/workflows/test-korean-ac.yml
+++ b/.github/workflows/test-korean-ac.yml
@@ -12,7 +12,7 @@ on:
       - '**.py'
 
 jobs:
-  test-naver-ac-python3:
+  test-korean-ac-python3:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
