--- a/workflow/info.plist
+++ b/workflow/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string></string>
+	<string>com.inchans.alfkoreansearch</string>
 	<key>category</key>
 	<string>Internet</string>
 	<key>connections</key>
